# beko-brewconnect

./: API.md  Architecture.md  HomeAssistant.md  Protocol.md  README.md  ReverseEngineering.md  pyproject.toml
coffee_sdk/: __init__.py  auth.py  client.py  drinks.py  machine.py  models.py  recipes.py
custom_components/beko_brewconnect/: __init__.py  binary_sensor.py  button.py  config_flow.py  const.py  coordinator.py  entity.py  manifest.json  sensor.py
custom_components/beko_brewconnect/coffee_sdk/: __init__.py  auth.py  client.py  drinks.py  exceptions.py  machine.py  models.py  recipes.py
custom_components/beko_brewconnect/translations/: en.json
tests/: test_client.py  test_models.py  test_recipes.py
