[project]
name = "coffee-sdk"
version = "0.1.0"
description = "Python SDK for Beko/Arcelik BrewConnect (HomeDirect) coffee machines via the Tuya Cloud API"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.7",
]

[project.optional-dependencies]
cli = ["typer>=0.12", "rich>=13.7"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.5", "black>=24.0", "respx>=0.21"]

[project.scripts]
coffee = "coffee_cli.__main__:app"

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["coffee_sdk*", "coffee_cli*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.black]
line-length = 100
target-version = ["py312"]
